--- a/test/index.html
+++ b/test/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Spec Runner</title>
-  <link rel="stylesheet" type="text/css" href="bower_modules/jasmine/lib/jasmine-core/jasmine.css">
+  <link rel="stylesheet" type="text/css" href="../src/bower_modules/jasmine-core/lib/jasmine-core/jasmine.css">
 
   <!-- Combine require configs from both src and test, then load the runner -->
   <script src="../src/app/require.config.js"></script>
   <script src="require.config.js"></script>
-  <script src="bower_modules/requirejs/require.js" data-main="../test/SpecRunner.browser"></script>
+  <script src="../src/bower_modules/requirejs/require.js" data-main="../test/SpecRunner.browser"></script>
 </head>
 
 <body>
+
+
+
 </body>
 </html>
